# KTC_compiler

./: .gitignore  1.dot  CMakeLists.txt  README.md  ast_tree(1).dot  main.cpp
include/: asm_struct.h  ast2cfg.h  builder.h  dot_gen.h  log.h  register.h  regtab.h  rv64_instr.h  slab.cpp  symbol.h  symtab.h
include/ABT/: slab.h
lib/: ast2cfg.cpp  dot_gen.cpp  main.cpp
lib/antlr_parser/: SysY.g4  parser_gen.sh
lib/antlr_parser/.antlr/: SysY.interp  SysYBaseListener.java  SysYLexer.interp  SysYLexer.java  SysYLexer.tokens  SysYListener.java  SysYParser.java
note/: compiler_procedure.typ
src/: 11  11.cpp  rv64_instr  rv64_instr.cpp
td/: KTCGen.cpp  base.td  ktc.h.inc  ktc.td  test.sh
test/: CMakeLists.txt  test  test_asm.c  test_asm.elf  test_asm.s  tutor.txt
test/src/: test_0221.cpp  test_asm.c  test_asm_struct.cpp  test_instruct.cpp  test_new.cpp  test_symtab.cpp
